style(about): fix spacing in tablet view

--- a/src/pages/about-empire.module.less
+++ b/src/pages/about-empire.module.less
@@ -68,6 +68,7 @@
     max-width: 768px;
 
     .callout, .stdContent {
+      margin: 24px auto;
       width: 720px;
     }
 
